--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+body{
+    background-color: bisque;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Header{
+    height: 50px;
+    background-color: white;
+    margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Card{
+    position: absolute;
+    z-index: 9;
+    background-color: #f1f1f1;
+    text-align: center;
+    cursor: move;
+    border: 1px solid #d3d3d3;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Canvas{
+    border-radius: 20px;
+    background-color: aliceblue;
+    padding: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 600px;
 }
 
-.App-link {
-  color: #61dafb;
+.User .logo{
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.User #picture{
+    height: 40px;
+    width: 40px;
+    border-radius: 5px;
 }
