--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,22 @@ body{
     background-color: bisque;
 }
 
-.Header{
+.header{
     height: 50px;
     background-color: white;
     margin-bottom: 20px;
 }
 
-.Card{
+.footer{
+    height: 50px;
+    background-color: white;
+    margin-top: 20px;
+}
+
+.card{
     position: absolute;
+    height: 20%;
+    width: 20%;
     z-index: 9;
     background-color: #f1f1f1;
     text-align: center;
@@ -18,7 +26,7 @@ body{
 
 }
 
-.Canvas{
+.canvas{
     border-radius: 20px;
     background-color: aliceblue;
     padding: 10px;
@@ -27,12 +35,104 @@ body{
     height: 600px;
 }
 
-.User .logo{
-    align-items: center;
+.user-logo{
+    display: flex;
+    justify-content: right;
 }
 
-.User #picture{
+.user-logo #picture{
     height: 40px;
     width: 40px;
     border-radius: 5px;
+}
+
+.unselectable {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.25);
+    animation-name: appear;
+    animation-duration: 300ms;
+}
+
+.modal-dialog {
+    width: 100%;
+    max-width: 550px;
+    background: white;
+    position: relative;
+    margin: 0 20px;
+    max-height: calc(100vh - 40px);
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: slide-in;
+    animation-duration: 0.5s;
+}
+
+.modal-header,
+.modal-footer {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+}
+.modal-header {
+    border-bottom: 1px solid #dbdbdb;
+    justify-content: space-between;
+}
+.modal-footer {
+    border-top: 1px solid #dbdbdb;
+    justify-content: flex-end;
+}
+.modal-close {
+    cursor: pointer;
+    padding: 1rem;
+    margin: -1rem -1rem -1rem auto;
+}
+.modal-body {
+    overflow: auto;
+}
+.modal-content {
+    padding: 1rem;
+}
+
+.modal-title {
+    margin: 0;
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@keyframes slide-in {
+    from {
+        transform: translateY(-150px);
+    }
+    to {
+        transform: translateY(0);
+    }
 }
