--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 body{
-    background-color: #7b919a;
+    /*background-color: dimgray;*/
+    background: url("https://krot.info/uploads/posts/2021-02/1613661522_28-p-foni-dlya-chatov-telegram-28.jpg");
+}
+
+#root {
+    height: 300px;
 }
 
 a{
@@ -7,42 +12,16 @@ a{
 }
 
 .header{
+    width: 100%;
     height: 50px;
     background-color: white;
     margin-bottom: 20px;
     display: flex;
-
-}
-
-.footer{
-    height: 50px;
-    background-color: white;
-    margin-top: 20px;
-}
-
-.card{
-    display: block;
-    position: absolute;
-    height: 400px;
-    width: 300px;
-    z-index: 9;
-    background-color: #f1f1f1;
-    text-align: center;
-    cursor: move;
-    border: 1px solid #d3d3d3;
-    border-radius: 20px;
-}
-
-.card-pic{
-    width: 150px;
-    height: 150px;
-    border-radius: 10px;
-    margin-bottom: 20px;
 }
 
 .canvas{
     border-radius: 20px;
-    background-color: aliceblue;
+    background-color: dimgray;
     padding: 10px;
     margin-left: 20px;
     margin-right: 20px;
@@ -50,17 +29,22 @@ a{
 }
 
 .profile-board-list{
-    border-radius: 20px;
-    background-color: aliceblue;
+    width: 97%;
+    height: 600px;
+    border-radius: 10px;
+    background-color: dimgray;
     padding: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .user-logo{
     display: flex;
     margin-top: 5px;
-    margin-left: 90%;
+}
+.profile-header-title{
+    width: 80%;
+    text-align: center;
 }
 
 .user-logo #picture{
@@ -70,14 +54,19 @@ a{
 }
 
 .dropdown-menu{
+    width: 100px;
+
     position: absolute;
     top: 30px;
     right: 10px;
-    background-color: #959a9a;
+
+    background-color: dimgray;
+    border-color: #595980;
+    border-style: double;
     text-align: center;
+
     border-radius: 10px;
     padding: 5px;
-    color: white;
 }
 
 .unselectable {
@@ -164,7 +153,7 @@ a{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 39px;
+    font-size: 20px;
     font-weight: bold;
     transition-duration: 0.4s;
 }
@@ -179,12 +168,12 @@ a{
 }
 
 .common-text-title{
-    color: rgba(105,154,152,0.78);
+    font-family: "Javanese Text";
+    font-size: 30px;
+    position: relative;
+    bottom:29px;
+    color: dimgray;
     font-weight: bolder;
-}
-
-.common-text-text{
-    color: #699a98;
 }
 
 .board-list-board-segment{
@@ -193,6 +182,8 @@ a{
     display: grid;
     grid-template-columns: 4fr 1fr;
     margin-bottom: 10px;
+    background: #699a98;
+    border-radius: 12px;
 }
 
 @keyframes appear {
