--- a/src/components/styles/Boards.module.css
+++ b/src/components/styles/Boards.module.css
@@ -3,10 +3,13 @@
     margin: 15px 0;
 
     margin-left: auto;
-    margin-right: 1em;
+    margin-right: 15px;
 
-    height: 25px;
+    height: 50px;
     width: 70px;
+
+    border-width: 1px;
+    border-style: unset;
 
 }
 .buttonDeleteText{
