--- a/src/components/styles/HeaderWithBoardsList.module.css
+++ b/src/components/styles/HeaderWithBoardsList.module.css
@@ -39,7 +39,7 @@
     display: grid;
 
     height: 43px;
-    width: 150px;
+    width: 200px;
     background-color: white;
     margin: 3px;
     border: 1px solid;
@@ -54,5 +54,38 @@
     font-size: large;
     position: relative;
     margin-top: 3px;
+}
+
+.nav{
+    width: 150px;
+
+    position: absolute;
+    top: 30px;
+    right: 10px;
+
+    background-color: white;
+    border-color: dimgray;
+    border-style: solid;
+    border-width: 2px;
+    text-align: center;
+
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.navText{
+    font-family: "Javanese Text";
+    font-size: 100%;
+    font-size: larger;
+    color: dimgray;
+
+}
+
+.hrStyle{
+    margin: 20px 0;
+    padding: 0;
+    height: 0;
+    border: none;
+    border-top: 2px dotted #ddd;
 }
 
